src/core/window.c
@@ -58,6 +58,7 @@
 
 #ifdef HAVE_WAYLAND
 #include "wayland/meta-window-wayland.h"
+#include "wayland/meta-wayland-surface.h"
 #include "wayland/meta-wayland-private.h"
 #endif
 
@@ -723,6 +724,10 @@ meta_window_should_attach_to_parent (MetaWindow *window)
 static gboolean
 client_window_should_be_mapped (MetaWindow *window)
 {
+  if (window->client_type == META_WINDOW_CLIENT_TYPE_WAYLAND &&
+      !window->surface->buffer)
+    return FALSE;
+
   return !window->shaded;
 }
 
@@ -1533,6 +1538,10 @@ meta_window_showing_on_its_workspace (MetaWindow *window)
 gboolean
 meta_window_should_be_showing (MetaWindow  *window)
 {
+  if (window->client_type == META_WINDOW_CLIENT_TYPE_WAYLAND &&
+      !window->surface->buffer)
+    return FALSE;
+
   /* Windows should be showing if they're located on the
    * active workspace and they're showing on their own workspace. */
   return (meta_window_located_on_workspace (window, window->screen->active_workspace) &&
